HTML_first_page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    
+
     <div class="first_half">
         <div></div>
 
@@ -22,31 +22,36 @@
         <p>Connect your bank card, and create accounts in the selected currency.</p>
     </div>
 
-    <div class="second_half">
+    <div class="second">
+        <div class="second_half">
 
-        <div></div>
+            <div class="img"></div>
 
-        <h1>Welcome back!</h1>
+            <h1>Welcome back!</h1>
 
-        <p>Please login to access your account.</p>
+            <p class="subtitle">Please login to access your account.</p>
 
-        <p>E-mail or phone number</p>
+            <p class="e-mail">E-mail or phone number</p>
 
-        <div class="mail">
-            <p>Type your e-mail or phone number</p>
+            <div class="input_mail">
+                <p>Type your e-mail or phone number</p>
+            </div>
+
+            <p class="passw">Password</p>
+
+            <div class="input_password">
+                <p>Type your password</p>
+            </div>
+
+            <div class="valid">
+                <p>Log In</p>
+            </div>
+
+            <div class="sign-in">
+                <p>Don't have an account? <a href="./index2.html">Sign Up</a></p>
+            </div>
         </div>
-
-        <div class="password">
-            <p>Type your password</p>
-        </div>
-
-        <div class="valid">
-            <p>Log In</p>
-        </div>
-
-        <a href="">Don't have an account? Sign Up</a>
     </div>
-
     <script src="./app.js"></script>
 </body>
 
