JS for first page

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <p class="e-mail">E-mail or phone number</p>
 
             <div class="input_mail">
-                <p>Type your e-mail or phone number</p>
+                <input class="inp_em_number" type="text" placeholder="Type your e-mail or phone number +375 (xx) xxx-xx-xx" value="">
             </div>
-
+            
             <p class="passw">Password</p>
-
+            
             <div class="input_password">
-                <p>Type your password</p>
+                <input class="inp_password" type="text" placeholder="Type your password" value="">
             </div>
 
             <div class="valid">
