--- a/First Page/index.html
+++ b/First Page/index.html
@@ -15,6 +15,7 @@
 <body>
 
     <div class="first_half">
+        
         <div></div>
 
         <h2>Receive payments from any banking system</h2>
@@ -48,7 +49,7 @@
             </div>
 
             <div class="sign-in">
-                <p>Don't have an account? <a href="./index2.html">Sign Up</a></p>
+                <p>Don't have an account? <a href="../SecondPage/index2.html">Sign Up</a></p>
             </div>
         </div>
     </div>
